[package]
name = "micro_ihex"
version = "0.1.0"
authors = ["Ian Mobley <ianmobley@gmail.com>"]
license = "MIT"
repository = "https://github.com/iMobs/micro_ihex"
edition = "2018"
description = "A no std Intel Hex parser and serializer library"
keywords = ["ihex", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
